# thema_study

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_0001_initial_schema.py  20260403_0002_add_tags.py
backend/app/: api.py  auth.py  bootstrap.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
backend/scripts/: export_openapi.py
backend/tests/: test_app.py
docs/: remaining-tasks.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/components/: AccountPanel.tsx  AuthPanel.tsx  AuthSection.tsx  HeroSection.tsx  ItemCardList.tsx  ItemEditorPanel.tsx  ItemListControls.tsx  ItemListPanel.tsx  ItemPaginationBar.tsx  ItemSection.tsx  ItemStatusPanel.tsx  TagFilterBar.tsx
frontend/src/hooks/: useAccountSettings.ts  useAuthController.ts  useAuthForms.ts  useAuthSession.ts  useItemEditor.ts  useItemFilters.ts  useItemMutations.ts  useItemsController.ts  useItemsDataLoader.ts  useTagSummary.ts
frontend/src/lib/: api.ts  config.ts  item-utils.ts  ui-copy.ts
